fixing scroll issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -39,11 +39,7 @@ body {
         );
     } */
 }
-html,
-body {
-    -webkit-overflow-scrolling: touch !important;
-    overflow: auto !important;
-}
+
 html {
     padding: 0;
     margin: 0;
